--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:12.13.0-alpine
+image: node:12.18.2-alpine
 
 stages:
   - build
@@ -21,17 +21,19 @@ build:
 test:
   stage: test
   script:
-    - npm run test:coverage
+    - npm run test:ci
   artifacts:
     paths:
-      - reports/coverage
-
+      - coverage
+    untracked: false
+    expire_in: 30 days
+    
 pages:
   stage: coverage
   dependencies:
     - test
   script:
-    - mv reports/coverage public
+    - mv coverage/lcov-report public
   artifacts:
     paths:
       - public
