--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
-      "declaration": false,
+      "declaration": true,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
       "module": "commonjs",
@@ -19,6 +19,12 @@
       "target": "es2016",
       "resolveJsonModule": true,
       "esModuleInterop": true,
+      "baseUrl": ".",
+      "paths": {
+        "*": [
+            "node_modules/*"
+        ]
+      }
     }
   }
   
