--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,30 +1,29 @@
 {
-    "compileOnSave": true,
-    "compilerOptions": {
-      "declaration": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "module": "commonjs",
-      "newLine": "LF",
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitAny": true,
-      "noImplicitReturns": true,
-      "noImplicitThis": false,
-      "noUnusedParameters": false,
-      "noUnusedLocals": true,
-      "outDir": "dist",
-      "skipLibCheck": true,
-      "sourceMap": false,
-      "strictNullChecks": false,
-      "target": "es2016",
-      "resolveJsonModule": true,
-      "esModuleInterop": true,
-      "baseUrl": ".",
-      "paths": {
-        "*": [
-            "node_modules/*"
-        ]
-      }
+  "compileOnSave": true,
+  "compilerOptions": {
+    "declaration": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "module": "commonjs",
+    "newLine": "LF",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": false,
+    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "outDir": "dist",
+    "skipLibCheck": true,
+    "sourceMap": false,
+    "strictNullChecks": false,
+    "target": "es2016",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"],
+      "src/*": ["src/*"],
+      "test/*": ["test/*"]
     }
   }
-  
+}
