--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,7 @@
     "noUnusedLocals": true,
     "outDir": "dist",
     "skipLibCheck": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "strictNullChecks": false,
     "target": "es2016",
     "resolveJsonModule": true,
