Feature/batch infer

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://gitlab.com/hidden-fox/inferschema#readme",
   "dependencies": {
+    "@navadt/common": "^0.8.5",
     "log4js": "^6.3.0",
     "papaparse": "^5.2.0"
   },
