--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@navadt/inferschema",
-  "version": "1.0.11",
+  "name": "inferschema",
+  "version": "0.1.0",
   "description": "Schema inference library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,9 +31,9 @@
   "author": "Nava Technologies",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/hidden-fox/inferschema/issues"
+    "url": "https://github.com/snava10/inferschema/issues"
   },
-  "homepage": "https://gitlab.com/hidden-fox/inferschema#readme",
+  "homepage": "https://github.com/snava10/inferschema",
   "dependencies": {
     "papaparse": "^5.2.0"
   },
