--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/hidden-fox/inferschema.git"
+    "url": "git+ssh://git@github.com:snava10/inferschema.git"
   },
   "keywords": [
     "typescript",
@@ -35,18 +35,18 @@
   },
   "homepage": "https://github.com/snava10/inferschema",
   "dependencies": {
-    "papaparse": "^5.2.0"
+    "papaparse": "^5.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "@types/papaparse": "^5.0.4",
+    "@types/jest": "^26.0.15",
+    "@types/papaparse": "^5.2.4",
     "cross-env": "7.0.2",
-    "jest": "^26.1.0",
+    "jest": "^26.6.1",
     "rimraf": "3.0.2",
-    "ts-jest": "^26.1.2",
+    "ts-jest": "^26.4.2",
     "tslint": "6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.9.6"
+    "typescript": "4.0.3"
   },
   "files": [
     "dist/**/*"
